app01/k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: app01-vs
  namespace: staging
spec:
  hosts:
  - app01.staging.svc.cluster.local
  http:
  - route:
    - destination:
        host: app01.staging.svc.cluster.local
        subset: v1
      weight: 0
    - destination:
        host: app01.staging.svc.cluster.local
        subset: v2
      weight: 100
